# markdown_to_anki

./: .gitignore  Anki cards.md  Cargo.toml  README.md  bacon.toml  cards_style.css  rules.md  sample_callout.html  words.md  words_cn.md
demo/: arules.md  other.md
src/: anki_connect.rs  callout.rs  cli.rs  deck.rs  error.rs  find_markdown_files.rs  http.rs  macros.rs  main.rs  markdown_to_html.rs  note.rs  note_operation.rs  obsidian_to_anki.rs  progress.rs  utils.rs
src/anki/: api_params.rs  client_traits.rs  error.rs  internal_client.rs  internal_model.rs  internal_note.rs  mod.rs  sync.rs
src/anki_connect/: anki_connect_client.rs  card.rs  cards_client.rs  client.rs  deck.rs  decks_client.rs  error.rs  http_client.rs  mod.rs  model.rs  models_client.rs  note.rs  notes_client.rs  params.rs  response.rs  util.rs
src/anki_connect/client/: mod.rs  reqwest_client.rs  ureq_client.rs
src/anki_connect_client/: cards.rs  client.rs  decks.rs  http_client.rs  mod.rs  models.rs  notes.rs
src/callout/: callout.rs  callout_content.rs  callout_error.rs  callout_type.rs  content.rs  error.rs  mod.rs  try_from.rs  try_from_old.rs
src/client/: client.rs  deck.rs  error.rs  http_client.rs  mod.rs  model.rs  note.rs  response.rs
src/commands/: mod.rs  obsidian_to_anki.rs  sync.rs
src/model/: basic.rs  mod.rs  rule.rs  traits.rs  word.rs
src/note/: basic.rs  mod.rs  traits.rs
test/: other2.md
