[package]
name = "markdown_to_anki"
version = "0.1.0"
edition = "2024"

[dependencies]
# anki_bridge = { version = "0.8.0", features = ["ureq_blocking"] }
ankiconnect-rs = "1.0.0"
clap = "4.5.36"
indicatif = { version = "0.17.11", features = [
    "rayon",
    "improved_unicode",
    "in_memory",
] }
console = { version = "0.15", default-features = false, features = [
    "ansi-parsing",
] }
jwalk = "0.8.1"
markdown = { version = "1.0.0-alpha.23", features = ["json", "log", "serde"] }
rayon = "1.10.0"
regex = "1.11.1"
serde = "1.0.219"
strum = { version = "0.27.1", features = ["derive"] }
tracing = "0.1.41"
tracing-indicatif = "0.3.9"
tracing-subscriber = "0.3.19"
enum_dispatch = "0.3.13"
ureq = { version = "3.0.11", features = ["json"] }
serde_json = "1.0.140"
